syntax = "proto3";

package tieba;

option java_package = "com.huanchengfly.tieba.post.api.models.protos";

message CommonRequest {
  optional string BDUSS = 10;
  string _client_id = 3;
  int32  _client_type = 1;
  string _client_version = 2;
  string _os_version = 25;
  string _phone_imei = 5;
  string _phone_newimei = 14;
  int64 _timestamp = 8;
  string brand = 26;
  string c3_aid = 35;
  string cuid = 7;
  string cuid_galaxy2 = 32;
  optional string cuid_gid = 33;
  string from = 6;
  optional int32 is_teenager = 41;
  string lego_lib_version = 28;
  string model = 9;
  string net_type = 12;
  string oaid = 34;
  string pversion = 24;
  optional string sample_id = 36;
  optional string sign = 23;
  optional string stoken = 30;
  optional string tbs = 11;
  optional string z_id = 31;
}